# depictio-hackathon

./: .gitignore  MIGRATION_COMPLETE.md  README.md  app.py  pyproject.toml  start_services.sh
.claude/: settings.local.json
assets/: custom.css
fastapi_service/: config.py  main.py
fastapi_service/services/: csv_monitor.py
fastapi_service/websocket/: manager.py  routes.py
scripts/: simulate_stream.py
src/: __init__.py  callbacks.py  data_loader.py  layout.py  umap_processor.py
